Fix signature alignment

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -47,10 +47,6 @@ blockquote[epub|type~="z3998:letter"]{
 	font-style: italic;
 }
 
-p[epub|type~="z3998:valediction"]{
-	text-align:center;
-}
-
 [epub|type~="z3998:letter"] footer p.signature,
 p[epub|type~="z3998:salutation"]{
 	font-variant: small-caps;
@@ -58,6 +54,14 @@ p[epub|type~="z3998:salutation"]{
 
 p[epub|type~="z3998:salutation"]{
 	text-align:left;
+}
+
+p[epub|type~="z3998:valediction"]{
+	text-align:center;
+}
+
+[epub|type~="z3998:letter"] footer p.signature{
+	text-align:right;
 }
 
 [epub|type~="z3998:lyrics"] p{
